🔧 Correcting navigation scrolling on mobile

--- a/scss/main.css
+++ b/scss/main.css
@@ -856,12 +856,14 @@ body footer.footer .footer__container .footer__right-box .footer__info .footer-i
     text-align: center;
     gap: 0;
     margin: 0 auto;
+    width: 100%;
   }
   body .header .header__container nav.nav .wrap-navigation ul.header__menu .menu__item .menu__link {
     display: inline-block;
     font-size: clamp(1.438rem, 1.333rem + 0.52vw, 1.75rem);
     font-weight: 500;
     padding: 20px 0;
+    width: 100%;
   }
   body .header .header__container nav.nav .wrap-navigation .header__socials {
     margin: 0 auto;
